# reinforce-cursor

./: .gitignore  README.md  github_topics.txt  package.json  pyproject.toml  requirements.txt  run_training.py
bmds/: config.py  synthesizer.py
bmds/data/: download.py  features.py  parser.py  statistics.py  trajectory_db.py
bmds/reward/: biomechanical_reward.py
bmds/training/: dataset_builder.py  evaluate.py  model_loader.py  train_cql.py
bmds/utils/: fitts.py  kinematics.py  visualization.py
scripts/: 05_evaluate_policy.py  06_generate_trajectories.py  07_live_mujoco_viewer.py  08_live_screen_animation.py  09_bot_detection_test.py  10_third_party_bot_test.py  11_multi_detector_gauntlet.py  12_visualize_postprocessed.py  _delbot_classify.js  _script09_helpers.py
