[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "bmds"
version = "0.1.0"
description = "Biomechanical Mouse Dynamics Synthesizer - Physics-based synthetic human mouse trajectory generation"
requires-python = ">=3.10"
dependencies = [
    "mujoco>=3.0",
    "myosuite>=2.7.0",
    "gymnasium>=0.29",
    "d3rlpy>=2.6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "torch>=2.0",
    "scipy>=1.10",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "h5py>=3.9",
    "tqdm>=4.65",
    "requests>=2.31",
    "scikit-learn>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov", "ruff"]

[tool.setuptools.packages.find]
include = ["bmds*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
